--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
     "mongodb"
   ],
   "author": "Syed Mohammad Yasir",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongodb": "^5.5.0"
+  }
 }
